--- a/employee/src/componets/Employee Table/style.css
+++ b/employee/src/componets/Employee Table/style.css
@@ -9,3 +9,11 @@ tbody {
     overflow-x:hidden;
     max-height: 60vh;
 }
+
+thead,
+tbody tr {
+    display:table;
+    width:100%;
+    table-layout:fixed
+}
+
